fix footer spacing

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -356,7 +356,8 @@ footer.page-footer {
   font-size: 20px;
   width: 80%;
   line-height: 150%;
-  margin-top: 6%
+  margin-top: 6%;
+  margin-bottom: 5%;
 }
 
 .phone-number {
